Updated styles for search

--- a/quintagroup/theme/sunrain/static/css/IEFixes.css
+++ b/quintagroup/theme/sunrain/static/css/IEFixes.css
@@ -8,8 +8,7 @@
 #livesearchLegend {
   margin-left:-7px;
   }
-.portletSearch .portletItem,
-.portletSearch .LSBox {
+.portletSearch {
   zoom:1;
   }
 #portal-personaltools-wrapper {
