--- a/quintagroup/theme/sunrain/static/css/rain.css
+++ b/quintagroup/theme/sunrain/static/css/rain.css
@@ -290,6 +290,7 @@ li.formTab a:hover {
   margin:1em -0.9em -2em;
   }
 .documentDescription {
+  font-weight:bold;
   margin:0 0 1em;
   }
 #content-history div.historyComment {
@@ -1035,25 +1036,27 @@ dl.portlet.portletCalendar dd {
 
 /*---------- PORTLET SEARCH ----------*/
 .portletSearch .LSBox {
-  background:transparent;
+  padding:0 4px 0 5px;
   }
-.portletSearch .portlet-search-gadget {
-  border-color:#8cacbb;
-  border-style:solid;
-  border-width:1px 0 1px 1px;
-  float:left;
-  height:1.27em;
-  padding:3px 0 0 3px;
+.portletSearch .portlet-search-gadget,
+.portletSearch .portlet-search-gadget-nols {
+  background-color:#fff;
+  border:1px solid #8cacbb;
+  margin:0 0 0 -5px;
+  padding:2px 3px 3px;
+  vertical-align:top;
   width:65%;
   }
 .portletSearch .searchButton {
-  background:none #8cacbb;
+  background:#8cacbb;
   border:0;
   color:#fff;
   font-weight:bold;
-  height:1.67em;
-  margin:0 0 0 -5px !important;
+  height:22px;
+  margin:0 -4px 0 0;
   overflow:visible;
+  padding:0 4px;
+  vertical-align:top;
   width:35%;
   }
 .portletSearch .LSResult {
