--- a/quintagroup/theme/sunrain/static/css/sun.css
+++ b/quintagroup/theme/sunrain/static/css/sun.css
@@ -577,8 +577,8 @@ input.inputLabelActive {
   white-space:normal;
   }
 #theme-globalnav > li {
-  display:inline;
-  margin-right:0.5em;
+  display:inline-block;
+  margin:0 0.5em 0 0;
   position:relative;
   white-space:nowrap;
   }
@@ -652,16 +652,13 @@ input.inputLabelActive {
   -moz-border-radius:6px;
   border-radius:6px;
   left:175px;
-  margin-top: -5px;
-  top:0;
+  top:-5px;
   }
 #theme-globalnav ul li a.hasChildrens {
-  background-image:url(../images/home_sprite.png);
-  background-position:160px -233px;
-  background-repeat:no-repeat;
+  background:url(../images/home_sprite.png) no-repeat 160px -233px;
   }
 #theme-globalnav ul li:hover > a.hasChildrens {
-  background-position:160px -109px; 
+  background:url(../images/home_sprite.png) no-repeat 160px -109px #754613;
   }
 
 /*---------- PORTAL PERSONAL TOOLS ----------*/
@@ -1161,8 +1158,7 @@ dl.portlet.portletCalendar dd {
 
 /*---------- COLLECTIVE BLOG VIEW ----------*/
 .template-blog_view #content {
-  padding:1em 16px 0 !important;
-  margin-bottom:-2em;
+  padding:1em 16px 0;
   }
 .template-blog_view .documentEditable #content {
   margin-bottom:0;
@@ -1171,8 +1167,7 @@ dl.portlet.portletCalendar dd {
   margin:0 -16px;
   }
 #blog-listing .blog-item {
-  margin-top:1.5em;
-  margin-bottom:55px;
+  padding:1em 0 0;
   position:relative;
   }
 #blog-listing #parent-fieldname-text {
@@ -1180,7 +1175,7 @@ dl.portlet.portletCalendar dd {
   }
 #blog-listing #plone-document-byline {
   display:inline-block;
-  background-color:#ffffcc;
+  background-color:#e5e7eb;
   font-size:0.9em;
   line-height:1.2em;
   margin:5px -15px;
@@ -1208,12 +1203,9 @@ dl.portlet.portletCalendar dd {
   font-weight:bold;
   }
 #blog-listing .documentActions {
-  height:23px;
+  min-height:23px;
   margin:0 -16px;
   padding:1px 16px 20px;
-  position:absolute;
-  right:0;
-  width:100%;
   }
 #blog-listing .documentActions ul {
   border:0;
@@ -1230,7 +1222,7 @@ dl.portlet.portletCalendar dd {
   line-height:1.2em;
   }
 #blog-listing .comment-link {
-  padding-top:6px;
+  bottom:16px;
   position:absolute;
   }
 #blog-listing .comment-link a {
@@ -2181,7 +2173,9 @@ input.standalone,
 .draggingHook,
 #foldercontents-order-column,
 input.context,
-.visualNoPrint {
+.visualNoPrint,
+#portal-slogan,
+#subscribe-links {
   display:none;
   }
 .image-left {
