fixed sun color

--- a/quintagroup/theme/sunrain/static/css/sun.css
+++ b/quintagroup/theme/sunrain/static/css/sun.css
@@ -1175,7 +1175,7 @@ dl.portlet.portletCalendar dd {
   }
 #blog-listing #plone-document-byline {
   display:inline-block;
-  background-color:#e5e7eb;
+  background-color:#ffc;
   font-size:0.9em;
   line-height:1.2em;
   margin:5px -15px;
