--- a/quintagroup/theme/sunrain/static/css/sun.css
+++ b/quintagroup/theme/sunrain/static/css/sun.css
@@ -194,7 +194,11 @@ pre {
   overflow-x:auto;
   }
 input {
-  font-size:1em;
+  font:1em Arial, Helvetica, sans-serif;
+  vertical-align:middle;
+  }
+input[type="checkbox"] {
+  margin-right:3px;
   }
 #content {
   background-color:#fffff0;
@@ -294,10 +298,18 @@ li.formTab a:hover {
   }
 
 /*----- Plone Elements -----*/
+.visualHighlight {
+  background-color:#ffb;
+  }
 .pullquote {
   border-left:5px solid #222;
   margin:0 0 1em;
   padding:0 0 0 5px;
+  }
+.callout {
+  background-color:#eee;
+  border-left:1em solid #ccc;
+  padding:1em;
   }
 .hiddenStructure {
   background:none;
@@ -424,7 +436,7 @@ div.field.error {
 .LSBox {
   position:relative;
   }
-#searchGadget {
+.searchField {
   background:url(../images/home_sprite.png) no-repeat 0 0;
   border:0;
   font-size:1em;
@@ -516,6 +528,12 @@ input.inputLabelActive {
   font-size:85%;
   font-weight:normal;
   margin-left:2.5em;
+  }
+.collapsible .collapser.collapsed:after {
+  content:" ▶"
+  }
+.collapsible .collapser.expanded:after {
+  content:" ▼"
   }
 
 /*---------- PORTAL LOGO ----------*/
@@ -1277,6 +1295,19 @@ form.searchPage input.searchButton {
   padding:1px 10px;
   }
 
+/*----- Events -----*/
+.eventDetails {
+  clear:right;
+  float:right;
+  margin:0 0 0.5em 1em;
+  }
+
+/*----- Search Results -----*/
+.highlightedSearchTerm {
+  background-color:#ff9;
+  padding:0 2px;
+  }
+
 /*---------- EDITING ----------*/
 .fieldRequired {
   color:#fff;
@@ -1297,6 +1328,7 @@ form.searchPage input.searchButton {
   }
 #description {
   font-family:Arial, Helvetica, sans-serif;
+  width:100%;
   }
 .formHelp {
   color:#555;
