--- a/quintagroup/theme/sunrain/static/css/rain.css
+++ b/quintagroup/theme/sunrain/static/css/rain.css
@@ -302,12 +302,18 @@ li.formTab a:hover {
   background-color:#ffb;
   }
 .pullquote {
-  border-left:5px solid #222;
-  margin:0 0 1em;
-  padding:0 0 0 5px;
+  border-left:6px solid silver;
+  clear:right;
+  color:#406398;
+  float:right;
+  font-size:1.17em;
+  line-height:1.42em;
+  margin:0 1em 1.5em 2.5em;
+  padding-left:10px;
+  width:35%;
   }
 .callout {
-  background-color:#eee;
+  background-color:#e3e3e3;
   border-left:1em solid #ccc;
   padding:1em;
   }
@@ -621,6 +627,7 @@ input.inputLabelActive {
   padding:16px 16px 8px 16px;
   position:relative;
   -moz-border-radius:0 0 6px 6px;
+  -webkit-border-radius:0 0 6px 6px;
   border-radius:0 0 6px 6px;
   text-decoration: none;
   }
@@ -640,12 +647,14 @@ input.inputLabelActive {
   }
 #theme-globalnav li:hover > a.hasChildrens {
   -moz-border-radius:0;
-  border-radius:0; 
+  -webkit-border-radius:0;
+  border-radius:0;
   }
 
 /*----- DropDown -----*/
 #theme-globalnav li ul {
   -moz-border-radius:0 6px 6px 6px;
+  -webkit-border-radius:0 6px 6px 6px;
   border-radius:0 6px 6px 6px;
   background-color:#ff6046;
   display:none;
@@ -672,12 +681,16 @@ input.inputLabelActive {
   }
 #theme-globalnav:hover ul li:hover > a {
   background-color:#f3553b;
+  -moz-border-radius:0;
+  -webkit-border-radius:0;
+  border-radius:0;
   }
 #theme-globalnav ul li a span {
   line-height:1.1em;
   }
 #theme-globalnav li ul ul {
   -moz-border-radius:6px;
+  -webkit-border-radius:6px;
   border-radius:6px;
   left:175px;
   top:-5px;
@@ -792,6 +805,10 @@ input.inputLabelActive {
   border-bottom:1px solid #ccc;
   color:#666;
   text-decoration:none;
+  }
+.credits {
+  display:inline;
+  padding-right:0.2em;
   }
 
 /*---------- GENERAL PORTLETS PROPERTIES ----------*/
