Added preview image, Added ajax_load

--- a/quintagroup/theme/sunrain/static/css/sun.css
+++ b/quintagroup/theme/sunrain/static/css/sun.css
@@ -2256,7 +2256,7 @@ dl.collapsedInlineCollapsible dt.collapsibleHeader {
 
 }
 
-@media screen and (max-width:650px) {
+@media only screen and (max-width: 767px) {
 body {
   min-width:320px;
   }
