--- a/quintagroup/theme/sunrain/static/css/rain.css
+++ b/quintagroup/theme/sunrain/static/css/rain.css
@@ -2254,7 +2254,7 @@ dl.collapsedInlineCollapsible dt.collapsibleHeader {
 
 }
 
-@media screen and (max-width:650px) {
+@media only screen and (max-width: 767px) {
 body {
   min-width:320px;
   }
