--- a/quintagroup/theme/sunrain/static/css/rain.css
+++ b/quintagroup/theme/sunrain/static/css/rain.css
@@ -810,6 +810,9 @@ input.inputLabelActive {
   display:inline;
   padding-right:0.2em;
   }
+.colophonWrapper {
+  display:inline-block;
+  }
 
 /*---------- GENERAL PORTLETS PROPERTIES ----------*/
 .portlet {
