hid portal-globalnav-mobile in the print styles, droped forms.css, added a condition to check class

--- a/quintagroup/theme/sunrain/static/css/rain.css
+++ b/quintagroup/theme/sunrain/static/css/rain.css
@@ -2468,6 +2468,7 @@ div.top,
 .hiddenStructure,
 #portal-searchbox,
 #theme-globalnav,
+#portal-globalnav-mobile,
 #portal-personaltools,
 #portal-breadcrumbs,
 #edit-bar,
