--- a/quintagroup/theme/sunrain/static/css/sun.css
+++ b/quintagroup/theme/sunrain/static/css/sun.css
@@ -2470,6 +2470,7 @@ div.top,
 .hiddenStructure,
 #portal-searchbox,
 #theme-globalnav,
+#portal-globalnav-mobile,
 #portal-personaltools,
 #portal-breadcrumbs,
 #edit-bar,
