spinner print style updated

--- a/quintagroup/theme/sunrain/static/css/sun.css
+++ b/quintagroup/theme/sunrain/static/css/sun.css
@@ -2492,7 +2492,7 @@ div.top,
 .netscape4,
 #viewlet-below-content .reply,
 #viewlet-below-content .discussion,
-#kss-spinner,
+#ajax-spinner,
 #review-history,
 #content-history,
 .listingBar,
