--- a/quintagroup/theme/sunrain/static/css/rain.css
+++ b/quintagroup/theme/sunrain/static/css/rain.css
@@ -2394,6 +2394,13 @@ div.cell {
 .portletStaticText img {
   width:100%;
   }
+#dashboard-portlets1,
+#dashboard-portlets2,
+#dashboard-portlets3,
+#dashboard-portlets4 {
+  margin-right:0;
+  width:100%;
+  }
 
 }
 
